[project]
name = "ai-langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.10",
    "langgraph-api>=0.7.67",
    "langgraph-cli>=0.4.15",
    "langsmith>=0.7.14",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.2",
    "wasabi>=1.1.3",
]
